--- a/src/styles/_colors.module.scss
+++ b/src/styles/_colors.module.scss
@@ -4,9 +4,9 @@
     --background-hp-border: #030406;
 
     --window-frame-bg: #11141F;
-    --winddow-frame-border: #252833;
+    --window-frame-border: #252833;
     --window-frame-bg-focus: #262934;
-    --winddow-frame-border-focus: #373A45;
+    --window-frame-border-focus: #373A45;
 
     --pop-up: #4e5467;
 
@@ -41,16 +41,16 @@
   $background-hp-border: var(--background-hp-border);
 
   $window-frame-bg: var(--window-frame-bg);
-  $winddow-frame-border: var(--winddow-frame-border);
+  $window-frame-border: var(--winddow-frame-border);
   $window-frame-bg-focus: var(--window-frame-bg-focus);
-  $winddow-frame-border-focus: var(--winddow-frame-border-focus);
+  $window-frame-border-focus: var(--winddow-frame-border-focus);
 
   $pop-up: var(--pop-up);
 
   $lines: var(--lines);
 
   $text-light-grey: var(--text-light-grey);
-  $text-blue: var(--text-bluex);
+  $text-blue: var(--text-blue);
   $text-light-cream: var(--text-light-cream);
   $text-grey: var(--text-grey);
   $text-light: var(--text-light);
