--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@import url('/node_modules/react-grid-layout/css/styles.css');
+@import url('/node_modules/react-resizable/css/styles.css');
+
 #root {
   display: flex;
   flex-direction: column;
