--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -2,4 +2,11 @@
 
 .item {
     border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &.dark {
+        border: 1px solid $text-light-grey;
+    }
 }
